Continuing to extract messages for translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -1,6 +1,7 @@
 {
   "add-comment" : "Add Comment",
   "add-comments-need" : "To add comments, you need to <0>{signup}</0> or <1>{connect}</1>",
+  "add-connection" : "Add connection",
   "additional" : "Additional",
   "alert-text" : "Alert text",
   "align" : "Align",
@@ -28,6 +29,7 @@
   "compress-images" : "Compress images",
   "confirm-password" : "Confirm password",
   "connect" : "Connect",
+  "connected" : "Connected",
   "connect-home" : "Connect to Home",
   "connecting" : "Connecting",
   "continue-reading" : "Continue Reading →",
@@ -43,6 +45,7 @@
   "delete-draft" : "Delete draft",
   "deleting" : "Deleting...",
   "description" : "Description",
+  "disconnect" : "Disconnect",
   "discussion-closed" : "Discussion is closed",
   "donate" : "Donate",
   "donate-to-recipient" : "Donate to <0>{recipientName}</0>",
@@ -94,6 +97,7 @@
   "from-computer" : "From Computer",
   "from-device" : "From Device",
   "from-internet" : "From Internet",
+  "go" : "Go",
   "go-bottom" : "Go to the bottom",
   "go-first-comment" : "Go to the first comment",
   "go-last-comment" : "Go to the last comment",
@@ -184,11 +188,14 @@
   "name-or-node-url" : "Name or node URL",
   "name-or-node-url-not-valid" : "Name or node URL is not valid",
   "new-password" : "New password",
+  "new-post-button" : "New post",
   "new-post-item" : "New post",
   "new-post-title" : "New Post",
   "next-image" : "Next image",
   "no" : "No",
   "no-actions" : "No actions",
+  "no-name-known" : "no name known",
+  "no-name-set" : "no name set",
   "not-connected-home" : "Not connected to home",
   "no-text" : "(no text)",
   "nothing-yet" : "Nothing yet.",
@@ -197,11 +204,13 @@
   "ok" : "OK",
   "only-selected-allowed" : "Only selected are allowed",
   "only-selected-allowed-star-preferred" : "Only selected are allowed, marked by <0/> are preferred",
+  "open" : "Open",
   "oppose" : "Oppose",
   "password" : "Password",
   "password-not-set" : "Password not set yet",
   "passwords-different" : "Passwords are different",
   "paste-with-formatting" : "Paste text with formatting",
+  "people" : "People",
   "post-button" : "Post",
   "post-edited-conflict" : "The post was edited by somebody.",
   "posting-not-found" : "Posting not found or cannot be displayed.",
@@ -275,6 +284,7 @@
   "set-by-post-owner" : "set by post owner",
   "set-home-password" : "Set Home Password",
   "set-password-and-connect" : "Set Password & Connect",
+  "settings" : "Settings",
   "share" : "Share",
   "share-ellipsis" : "Share...",
   "show-formatting-hint" : "Show formatting hint",
@@ -322,11 +332,16 @@
   "view-later-comments" : "View later comments",
   "view-source" : "View source",
   "want-delete-draft" : "Do you really want to delete the draft?",
+  "want-disconnect" : "Do you really want to disconnect from your home node?",
   "want-forget-changes" : "Do you really want to forget all changes?",
   "where-from" : "Where it comes from?",
   "width" : "Width",
   "write-comment-here" : "Write a comment to {mention} here...",
   "yes" : "Yes",
+  "you-at-home" : "You are at your home node",
+  "your-news" : "Your news",
+  "your-profile" : "Your profile",
+  "your-timeline" : "Your timeline",
   "zoom-in" : "Zoom in",
   "zoom-out" : "Zoom out"
 }
