Continuing to extract messages for translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -18,8 +18,10 @@
   "caption" : "Caption",
   "change" : "Change",
   "change-date-time" : "Change Date/Time",
+  "change-date-time-ellipsis" : "Change date/time...",
   "clipboard-contains-formatting" : "The clipboard contains text with formatting. Do you want to paste the text with formatting tags?",
   "close" : "Close",
+  "comment-button" : "Comment",
   "comment-edited-conflict" : "The comment was edited by somebody.",
   "commenting-allowed-to" : "Commenting allowed to",
   "comments" : "Comments",
@@ -38,8 +40,12 @@
   "copy-link" : "Copy link",
   "copy-text" : "Copy text",
   "copy-with-formatting" : "Copy text with formatting",
+  "count-comments" : "{count} {count, plural, one {comment} other {comments}}",
   "count-more" : "{count} more",
   "count-new" : "{count} new",
+  "count-posts" : "<0>{count}</0> {count, plural, one {post} other {posts}}",
+  "count-subscribers" : "<0>{count}</0> {count, plural, one {subscriber} other {subscribers}}",
+  "count-subscriptions" : "<0>{count}</0> {count, plural, one {subscription} other {subscriptions}}",
   "delete" : "Delete",
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
   "delete-draft" : "Delete draft",
@@ -88,6 +94,7 @@
     "timeline" : "Timeline"
   },
   "fold" : "Fold",
+  "follow-comments" : "Follow comments",
   "forget" : "Forget",
   "forget-changes" : "Do you really want to forget the changes?",
   "forget-unfinished-comment" : "Do you really want to forget the unfinished comment?",
@@ -169,6 +176,7 @@
     "your-post" : "your post"
   },
   "italic" : "Italic",
+  "last-post" : "last",
   "link" : "Link",
   "links" : "Links",
   "load-all-comments" : "Load all comments",
@@ -206,14 +214,18 @@
   "only-selected-allowed-star-preferred" : "Only selected are allowed, marked by <0/> are preferred",
   "open" : "Open",
   "oppose" : "Oppose",
+  "original-deleted" : "Original deleted {date}",
   "password" : "Password",
   "password-not-set" : "Password not set yet",
   "passwords-different" : "Passwords are different",
   "paste-with-formatting" : "Paste text with formatting",
   "people" : "People",
+  "pin" : "Pin",
+  "pinned-post" : "Pinned post",
   "post-button" : "Post",
   "post-edited-conflict" : "The post was edited by somebody.",
   "posting-not-found" : "Posting not found or cannot be displayed.",
+  "posting-updated-at" : "updated",
   "post-preview" : "Post Preview",
   "preserve-formatting" : "Preserve formatting",
   "preview" : "Preview",
@@ -270,6 +282,7 @@
   "read-more" : "Read more...",
   "received-mail" : "Received the mail already",
   "reply" : "Reply",
+  "reply-ellipsis" : "Reply...",
   "reply-prev-comment" : "Reply to previous comment",
   "resend-mail" : "Send mail again",
   "reset-password" : "Reset Password",
@@ -281,12 +294,14 @@
   "select-all" : "Select all",
   "selected-preferred" : "Selected are preferred",
   "set-as-default" : "Set as default",
+  "set-by-admin" : "set by admin",
   "set-by-post-owner" : "set by post owner",
   "set-home-password" : "Set Home Password",
   "set-password-and-connect" : "Set Password & Connect",
   "settings" : "Settings",
   "share" : "Share",
   "share-ellipsis" : "Share...",
+  "share-page" : "Share page",
   "show-formatting-hint" : "Show formatting hint",
   "show-list-reactions" : "Show the detailed list of reactions",
   "show-number-reactions" : "Show the number of reactions",
@@ -300,6 +315,8 @@
   "subscribe-back" : "Subscribe back",
   "subscribed" : "Subscribed",
   "subscribed-to-me" : "Subscribed to me",
+  "subscribers" : "Subscribers",
+  "subscriptions" : "Subscriptions",
   "summary" : "Summary",
   "support" : "Support",
   "text" : "Text",
@@ -311,9 +328,12 @@
   "top" : "Top",
   "to-post" : "← Post",
   "undo" : "Undo",
+  "unfollow-comments" : "Unfollow comments",
   "unhide" : "Unhide",
   "unhide-my-subscription" : "Unhide my subscription",
   "unhide-subscription-to-me" : "Unhide subscription to me",
+  "unknown-name" : "Unknown name",
+  "unpin" : "Unpin",
   "unselect-all" : "Unselect all",
   "unsigned" : "Unsigned",
   "unsubscribe" : "Unsubscribe",
