Extracted messages for translation from the profile.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -2,6 +2,8 @@
   "add-comment" : "Add Comment",
   "add-comments-need" : "To add comments, you need to <0>{signup}</0> or <1>{connect}</1>",
   "add-connection" : "Add connection",
+  "add-donation" : "Add Donation",
+  "add-donation-button" : "Add donation",
   "additional" : "Additional",
   "alert-text" : "Alert text",
   "align" : "Align",
@@ -12,6 +14,8 @@
   "auto-hide-comments" : "Automatically hide comments",
   "avatar" : "Avatar",
   "avatar-placeholder" : "Avatar placeholder",
+  "avatar-shape" : "Avatar shape",
+  "bio" : "Bio",
   "bold" : "Bold",
   "bottom" : "Bottom",
   "cancel" : "Cancel",
@@ -46,6 +50,8 @@
   "count-posts" : "<0>{count}</0> {count, plural, one {post} other {posts}}",
   "count-subscribers" : "<0>{count}</0> {count, plural, one {subscriber} other {subscribers}}",
   "count-subscriptions" : "<0>{count}</0> {count, plural, one {subscription} other {subscriptions}}",
+  "create" : "Create",
+  "create-avatar" : "Create Avatar",
   "delete" : "Delete",
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
   "delete-draft" : "Delete draft",
@@ -82,17 +88,23 @@
   },
   "edit" : "Edit",
   "edit-comment" : "Edit Comment",
+  "edit-donation" : "Edit Donation",
   "edit-ellipsis" : "Edit...",
   "edit-image" : "Edit Image",
   "edit-link-preview" : "Edit link preview",
   "edit-post-title" : "Edit Post",
+  "edit-profile" : "Edit Profile",
+  "e-mail" : "E-mail",
   "enable-oppose-reactions" : "Enable \"Oppose\" reactions",
   "enable-reactions" : "Enable reactions",
   "enter-text-here" : "Enter text here...",
+  "failure-reason" : "Failure reason",
   "feed-title" : {
     "news" : "News",
     "timeline" : "Timeline"
   },
+  "female" : "Female",
+  "female-short" : "f.",
   "fold" : "Fold",
   "follow-comments" : "Follow comments",
   "forget" : "Forget",
@@ -104,6 +116,8 @@
   "from-computer" : "From Computer",
   "from-device" : "From Device",
   "from-internet" : "From Internet",
+  "full-name" : "Full name",
+  "gender" : "Gender (choose or type anything)",
   "go" : "Go",
   "go-bottom" : "Go to the bottom",
   "go-first-comment" : "Go to the first comment",
@@ -184,6 +198,8 @@
   "load-more" : "Load more...",
   "load-newer-posts" : "Load newer posts",
   "load-older-posts" : "Load older posts",
+  "male" : "Male",
+  "male-short" : "m.",
   "mark-all-read" : "Mark All as Read",
   "mark-read" : "Mark as Read",
   "mark-unread" : "Mark as Unread",
@@ -191,10 +207,15 @@
   "moera" : "Moera",
   "more-links" : "{count} {count, plural, one {link} other {links}}",
   "must-not-empty" : "Must not be empty",
+  "must-single-english-word" : "Must be a single English word",
+  "must-valid-e-mail" : "Must be a valid e-mail",
   "mutually-subscribed" : "Mutually subscribed",
+  "name" : "Name",
   "name-help" : "The name must be 4 - 120 characters long. You may use any Unicode character (including non-Latin alphabets), except whitespace and punctuation. Only this punctuation is allowed:",
+  "name-not-allowed" : "Name is not allowed",
   "name-or-node-url" : "Name or node URL",
   "name-or-node-url-not-valid" : "Name or node URL is not valid",
+  "name-taken" : "Name is already taken",
   "new-password" : "New password",
   "new-post-button" : "New post",
   "new-post-item" : "New post",
@@ -213,6 +234,15 @@
   "only-selected-allowed" : "Only selected are allowed",
   "only-selected-allowed-star-preferred" : "Only selected are allowed, marked by <0/> are preferred",
   "open" : "Open",
+  "operation-at" : "at",
+  "operation-status" : {
+    "added" : "Operation has been added",
+    "failed" : "Operation failed",
+    "started" : "Operation has been started",
+    "succeeded" : "Operation succeeded",
+    "unknown" : "Operation status is unknown",
+    "waiting" : "Operation is waiting"
+  },
   "oppose" : "Oppose",
   "original-deleted" : "Original deleted {date}",
   "password" : "Password",
@@ -239,7 +269,9 @@
     "signed" : "Signed"
   },
   "profile" : "Profile",
+  "profile-edited-conflict" : "Profile was edited by somebody.",
   "provider-setting" : "(provider setting)",
+  "qr-code" : "QR Code",
   "quote" : "Quote",
   "reached-bottom" : "You've reached the bottom",
   "reactions" : "Reactions",
@@ -281,6 +313,10 @@
   },
   "read-more" : "Read more...",
   "received-mail" : "Received the mail already",
+  "register" : "Register",
+  "register-different-name" : "Register a different name",
+  "registered-name-secret" : "Registered Name Secret",
+  "register-new-name" : "Register a New Name",
   "reply" : "Reply",
   "reply-ellipsis" : "Reply...",
   "reply-prev-comment" : "Reply to previous comment",
@@ -290,7 +326,10 @@
   "reset-password-instructions" : "To reset the password, please enter the name or the URL of your home node.",
   "reset-to-default" : "Reset to default",
   "retype-password" : "Please type the password again",
+  "rotate-left" : "Rotate left",
+  "rotate-right" : "Rotate right",
   "secret-code" : "Secret code",
+  "secret-words" : "Secret Words",
   "select-all" : "Select all",
   "selected-preferred" : "Selected are preferred",
   "set-as-default" : "Set as default",
@@ -324,9 +363,14 @@
   "text-formatting" : "Text formatting",
   "text-only" : "Text only",
   "title" : "Title",
+  "too-long" : "Too long",
   "tooltip" : "Tooltip",
   "top" : "Top",
   "to-post" : "← Post",
+  "transfer" : "Transfer",
+  "transfer-existing-name" : "Transfer an existing name",
+  "transfer-existing-name-button" : "Transfer an Existing Name",
+  "transfer-node-name" : "Transfer Name From Another Node",
   "undo" : "Undo",
   "unfollow-comments" : "Unfollow comments",
   "unhide" : "Unhide",
@@ -338,7 +382,10 @@
   "unsigned" : "Unsigned",
   "unsubscribe" : "Unsubscribe",
   "update" : "Update",
+  "update-current-name" : "Update the current name",
   "update-description" : "Update description",
+  "update-node-name" : "Update Node Name",
+  "upload-image" : "Upload image",
   "uploading-file" : "Uploading ${progress}% ...",
   "uploading-files" : "Uploading {loadedFiles} of {totalFiles} {progress}% ...",
   "upload-or-copy-images" : "<0>Upload images</0> or <1>Copy image</1>",
@@ -356,7 +403,10 @@
   "want-forget-changes" : "Do you really want to forget all changes?",
   "where-from" : "Where it comes from?",
   "width" : "Width",
+  "write-anything" : "Write anything...",
   "write-comment-here" : "Write a comment to {mention} here...",
+  "write-down-words" : "Please write down or print these words and keep them in a safe place. You will need them for any operations with the name ‘{name}’. <0>If you loose these words, they cannot be recovered and you will completely loose control of your registered name.</0>",
+  "written-down-words" : "I have written down all these words",
   "yes" : "Yes",
   "you-at-home" : "You are at your home node",
   "your-news" : "Your news",
