Extracted messages for translation from quick tips.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -272,6 +272,21 @@
   "profile-edited-conflict" : "Profile was edited by somebody.",
   "provider-setting" : "(provider setting)",
   "qr-code" : "QR Code",
+  "quick-tips" : {
+    "blog-buttons-desktop" : "To quickly access your blog, use buttons in the top-right corner:",
+    "blog-buttons-mobile" : "To quickly access your blog, use buttons in the bottom panel:",
+    "discover-blogs" : "Discover new blogs in the <0>list of blogs</0>.",
+    "new-post-desktop" : "To write a post, click <0/> button in the top-right corner.",
+    "new-post-mobile" : "To write a post, click <0/> button in the bottom panel.",
+    "subscribe" : "To subscribe to a blog, open it and click <0/> button.",
+    "title" : "Quick tips",
+    "visit-desktop" : "To visit someone's blog, click <0/> in the top-left corner and type the blog name.",
+    "visit-mobile" : "To visit someone's blog, click <0/> in the top panel and type the blog name.",
+    "your-news" : "your News feed;",
+    "your-notifications" : "your Notifications;",
+    "your-settings" : "your Settings;",
+    "your-timeline" : "your Timeline."
+  },
   "quote" : "Quote",
   "reached-bottom" : "You've reached the bottom",
   "reactions" : "Reactions",
@@ -351,6 +366,7 @@
   "size" : "Size",
   "spoiler" : "Spoiler",
   "strikeout" : "Strikeout",
+  "subscribe" : "Subscribe",
   "subscribe-back" : "Subscribe back",
   "subscribed" : "Subscribed",
   "subscribed-to-me" : "Subscribed to me",
