Finished to extract messages for translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -5,16 +5,20 @@
   "add-donation" : "Add Donation",
   "add-donation-button" : "Add donation",
   "additional" : "Additional",
+  "addons-changed-conflict" : "List of add-ons has been changed.",
   "alert-text" : "Alert text",
   "align" : "Align",
+  "all" : "All",
   "allowed-oppose-reactions" : "Allowed \"Oppose\" reactions",
   "allowed-support-reactions" : "Allowed \"Support\" reactions",
   "alt-text" : "Alternative text",
   "alt-text-button" : "Alt text",
+  "auto" : "Auto",
   "auto-hide-comments" : "Automatically hide comments",
   "avatar" : "Avatar",
   "avatar-placeholder" : "Avatar placeholder",
   "avatar-shape" : "Avatar shape",
+  "back-to-feed" : "← {feed}",
   "bio" : "Bio",
   "bold" : "Bold",
   "bottom" : "Bottom",
@@ -23,6 +27,10 @@
   "change" : "Change",
   "change-date-time" : "Change Date/Time",
   "change-date-time-ellipsis" : "Change date/time...",
+  "change-home-password" : "Change Home Password",
+  "change-password" : "Change Password",
+  "change-password-ellipsis" : "Change Password...",
+  "client-settings-changed-conflict" : "Client settings were changed by somebody.",
   "clipboard-contains-formatting" : "The clipboard contains text with formatting. Do you want to paste the text with formatting tags?",
   "close" : "Close",
   "comment-button" : "Comment",
@@ -39,9 +47,11 @@
   "connect-home" : "Connect to Home",
   "connecting" : "Connecting",
   "continue-reading" : "Continue Reading →",
+  "copy" : "Copy",
   "copy-image-from-internet" : "Copy Image From Internet",
   "copy-image-link" : "Copy image link",
   "copy-link" : "Copy link",
+  "copy-quote" : "Copy quote",
   "copy-text" : "Copy text",
   "copy-with-formatting" : "Copy text with formatting",
   "count-comments" : "{count} {count, plural, one {comment} other {comments}}",
@@ -52,6 +62,11 @@
   "count-subscriptions" : "<0>{count}</0> {count, plural, one {subscription} other {subscriptions}}",
   "create" : "Create",
   "create-avatar" : "Create Avatar",
+  "create-blog" : "Create a Blog",
+  "created-at" : "Created at:",
+  "create-token" : "Create a Token",
+  "current" : "Current",
+  "current-password" : "Current password",
   "delete" : "Delete",
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
   "delete-draft" : "Delete draft",
@@ -59,12 +74,16 @@
   "description" : "Description",
   "disconnect" : "Disconnect",
   "discussion-closed" : "Discussion is closed",
+  "domain" : "Domain",
+  "domain-already-taken" : "Domain is already taken",
+  "domain-too-short" : "Too short, should be 4 characters at least",
   "donate" : "Donate",
   "donate-to-recipient" : "Donate to <0>{recipientName}</0>",
   "donations-android-prohibited" : "Donations feature is prohibited in Android apps downloaded from Google Play according to <0>Google Play Payments Policy</0>.<1/><2/>Please use Moera web client for this.",
   "dont-ask-next-time" : "Don't ask next time",
   "download" : "Download",
   "downloading-image" : "Downloading image...",
+  "do-you-have-blog" : "Do you have a Moera blog?",
   "drafts" : "Drafts",
   "draft-saved" : "Draft saved.",
   "draft-saving" : "Saving...",
@@ -97,7 +116,9 @@
   "e-mail" : "E-mail",
   "enable-oppose-reactions" : "Enable \"Oppose\" reactions",
   "enable-reactions" : "Enable reactions",
+  "enter-name" : "Enter name...",
   "enter-text-here" : "Enter text here...",
+  "expires" : "Expires:",
   "failure-reason" : "Failure reason",
   "feed-title" : {
     "news" : "News",
@@ -105,6 +126,7 @@
   },
   "female" : "Female",
   "female-short" : "f.",
+  "find-more-people" : "Find more people →",
   "fold" : "Fold",
   "follow-comments" : "Follow comments",
   "forget" : "Forget",
@@ -189,6 +211,7 @@
     "your-blog" : "your blog",
     "your-post" : "your post"
   },
+  "invitation-buttons" : "<0>Create a new blog</0><1>or</1><2>Connect to your blog</2>",
   "italic" : "Italic",
   "last-post" : "last",
   "link" : "Link",
@@ -206,11 +229,15 @@
   "mention" : "Mention",
   "moera" : "Moera",
   "more-links" : "{count} {count, plural, one {link} other {links}}",
+  "more-reactions" : "{remaining} more",
+  "more-reactions-hidden" : "{remaining} more hidden",
   "must-not-empty" : "Must not be empty",
   "must-single-english-word" : "Must be a single English word",
-  "must-valid-e-mail" : "Must be a valid e-mail",
   "mutually-subscribed" : "Mutually subscribed",
+  "my-client" : "My Client",
+  "my-node" : "My Blog",
   "name" : "Name",
+  "name-already-taken" : "Name is already taken. Note that you can add any number to the name (like 'Arthur_42')",
   "name-help" : "The name must be 4 - 120 characters long. You may use any Unicode character (including non-Latin alphabets), except whitespace and punctuation. Only this punctuation is allowed:",
   "name-not-allowed" : "Name is not allowed",
   "name-or-node-url" : "Name or node URL",
@@ -220,16 +247,21 @@
   "new-post-button" : "New post",
   "new-post-item" : "New post",
   "new-post-title" : "New Post",
+  "new-token-created" : "New Token Created",
   "next-image" : "Next image",
   "no" : "No",
   "no-actions" : "No actions",
+  "no-addons" : "No add-ons loaded.",
+  "node-settings-changed-conflict" : "Node settings were changed by somebody.",
   "no-name-known" : "no name known",
   "no-name-set" : "no name set",
+  "not-allowed" : "Not allowed",
   "not-connected-home" : "Not connected to home",
   "no-text" : "(no text)",
   "nothing-yet" : "Nothing yet.",
   "notify-about-update" : "Notify followers about the update",
   "notify-followers" : "Notify followers",
+  "not-valid-e-mail" : "Not a valid e-mail address",
   "ok" : "OK",
   "only-selected-allowed" : "Only selected are allowed",
   "only-selected-allowed-star-preferred" : "Only selected are allowed, marked by <0/> are preferred",
@@ -246,6 +278,7 @@
   "oppose" : "Oppose",
   "original-deleted" : "Original deleted {date}",
   "password" : "Password",
+  "password-incorrect" : "Password is incorrect",
   "password-not-set" : "Password not set yet",
   "passwords-different" : "Passwords are different",
   "paste-with-formatting" : "Paste text with formatting",
@@ -270,6 +303,7 @@
   },
   "profile" : "Profile",
   "profile-edited-conflict" : "Profile was edited by somebody.",
+  "provider" : "Provider",
   "provider-setting" : "(provider setting)",
   "qr-code" : "QR Code",
   "quick-tips" : {
@@ -288,6 +322,7 @@
     "your-timeline" : "your Timeline."
   },
   "quote" : "Quote",
+  "quote-copied" : "Quote copied to the clipboard",
   "reached-bottom" : "You've reached the bottom",
   "reactions" : "Reactions",
   "reaction-title" : {
@@ -332,6 +367,8 @@
   "register-different-name" : "Register a different name",
   "registered-name-secret" : "Registered Name Secret",
   "register-new-name" : "Register a New Name",
+  "rename" : "Rename",
+  "rename-token" : "Rename a Token",
   "reply" : "Reply",
   "reply-ellipsis" : "Reply...",
   "reply-prev-comment" : "Reply to previous comment",
@@ -343,9 +380,11 @@
   "retype-password" : "Please type the password again",
   "rotate-left" : "Rotate left",
   "rotate-right" : "Rotate right",
+  "save" : "Save",
   "secret-code" : "Secret code",
   "secret-words" : "Secret Words",
   "select-all" : "Select all",
+  "selected-automatically" : "Selected automatically",
   "selected-preferred" : "Selected are preferred",
   "set-as-default" : "Set as default",
   "set-by-admin" : "set by admin",
@@ -353,6 +392,7 @@
   "set-home-password" : "Set Home Password",
   "set-password-and-connect" : "Set Password & Connect",
   "settings" : "Settings",
+  "settings-incorrect-values" : "Some settings have incorrect values.",
   "share" : "Share",
   "share-ellipsis" : "Share...",
   "share-page" : "Share page",
@@ -379,6 +419,8 @@
   "text-formatting" : "Text formatting",
   "text-only" : "Text only",
   "title" : "Title",
+  "token-name" : "Token name",
+  "token-usage-warning" : "Please note that the token gives full admin access to your blog. Never give it to anybody you don't trust!",
   "too-long" : "Too long",
   "tooltip" : "Tooltip",
   "top" : "Top",
@@ -407,17 +449,25 @@
   "upload-or-copy-images" : "<0>Upload images</0> or <1>Copy image</1>",
   "upload-or-copy-or-drop-images" : "<0>Upload images</0> or <1>Copy image</1> or drop them here",
   "url" : "URL",
+  "used-by-addon" : "Used by add-on:",
   "verify-signature" : "Verify signature",
+  "view-as-chart" : "View as chart",
+  "view-as-list" : "View as list",
   "view-comments" : "View comments",
   "view-earlier-comments" : "View earlier comments",
   "view-images-grid" : "View images as grid",
   "view-images-list" : "View images as list",
   "view-later-comments" : "View later comments",
   "view-source" : "View source",
+  "view-source-title" : "View Source",
+  "want-delete-addon" : "Do you really want to delete the add-on \"{name}\"?",
   "want-delete-draft" : "Do you really want to delete the draft?",
+  "want-delete-token" : "Do you really want to delete the token \"{name}\"?",
   "want-disconnect" : "Do you really want to disconnect from your home node?",
   "want-forget-changes" : "Do you really want to forget all changes?",
+  "welcome" : "Welcome!",
   "where-from" : "Where it comes from?",
+  "where-go" : "Where do you want to go?",
   "width" : "Width",
   "write-anything" : "Write anything...",
   "write-comment-here" : "Write a comment to {mention} here...",
@@ -425,8 +475,11 @@
   "written-down-words" : "I have written down all these words",
   "yes" : "Yes",
   "you-at-home" : "You are at your home node",
+  "you-can-copy-token" : "You can now copy your new token. For security reasons, this cannot be done later.",
   "your-news" : "Your news",
+  "your-password" : "Your password",
   "your-profile" : "Your profile",
+  "your-settings" : "Your Settings",
   "your-timeline" : "Your timeline",
   "zoom-in" : "Zoom in",
   "zoom-out" : "Zoom out"
