Translations for setting titles.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -401,6 +401,105 @@
       "subscribers-and-subscriptions" : "Subscribers & Subscriptions",
       "tokens" : "Tokens"
     },
+    "client" : {
+      "mercy" : {
+        "avatar_shape" : "Avatars shape",
+        "clock_offset" : "Clock offset from the real time (in hours)",
+        "comment_body-src-format_default" : "Default comment text formatting",
+        "comment_reactions_negative_default" : "Default set of \"Oppose\" reactions to my comment",
+        "comment_reactions_positive_default" : "Default set of \"Support\" reactions to my comment",
+        "comment_reactions_self_enabled" : "Allow to add reactions to your own comments",
+        "comment_replied-to_glance_enabled" : "Show quick preview of the comment replied to",
+        "comment_smileys_enabled" : "Replace simple smileys with emojis",
+        "comment_submit-key" : "Send comment when pressed",
+        "entry_gallery_loop" : "Loop gallery view",
+        "feed_width" : "Feed width (in pixels)",
+        "full-name_display" : "Displaying full names of users",
+        "fundraiser_preferred_auto" : "Automatically set preferred donation method",
+        "fundraiser_preferred_prefix" : "Preferred donation method (scheme or domain)",
+        "instants_number_mode" : "Number of notifications to be displayed",
+        "instants_profile-link" : "Click on avatar in a notification to open the user's profile",
+        "language" : "Language",
+        "naming_location" : "Naming server location",
+        "news-button_target-story" : "\"Your news\" button opens",
+        "posting_body_font-magnitude" : "Font size",
+        "posting_body_font-magnitude_mobile" : "Post font size",
+        "posting_comments_addition_default" : "Commenting allowed by default",
+        "posting_comments_hide_default" : "Automatically hide comments by default",
+        "posting_comments_visibility_default" : "Comments visibility by default",
+        "posting_feed_news_enabled" : "Add your own posts to your News feed",
+        "posting_media_compress_default" : "Compress images in posts by default",
+        "posting_reactions_enabled_default" : "Enable reactions to my post by default",
+        "posting_reactions_negative_default" : "Default set of \"Oppose\" reactions to my post",
+        "posting_reactions_negative_enabled_default" : "Enable \"Oppose\" reactions to my post by default",
+        "posting_reactions_positive_default" : "Default set of \"Support\" reactions to my post",
+        "posting_reactions_self_enabled" : "Allow to add reactions to your own posts",
+        "posting_reactions_totals-visible_default" : "Show the number of reactions to my post by default",
+        "posting_reactions_visible_default" : "Show the detailed list of reactions to my post by default",
+        "posting_reply_preamble" : "Post reply preamble",
+        "posting_reply_quote-all" : "Quote the whole post on reply",
+        "posting_reply_subject-prefix" : "Post reply title prefix",
+        "posting_smileys_enabled" : "Replace simple smileys with emojis",
+        "posting_time_relative" : "Show relative time in posts",
+        "posting_visibility_default" : "Post visibility by default",
+        "principal_public_disabled" : "Disable \"Public\" access level",
+        "reactions_negative_available" : "Usable \"Oppose\" reactions",
+        "reactions_positive_available" : "Usable \"Support\" reactions",
+        "rich-text-editor_link-previews_max-automatic" : "Maximal number of link previews created automatically",
+        "rich-text-editor_paste-rich" : "When pasting text with formatting tags"
+      }
+    },
+    "node" : {
+      "avatar_max-size" : "Maximal size of avatars",
+      "comment_deleted_lifetime" : "Purge deleted comments after",
+      "comment_draft_lifetime" : "Purge comment drafts after",
+      "comment_max-size" : "Maximal size of comments",
+      "comment_max-size_soft" : "Maximal size of comments",
+      "comment_revision_lifetime" : "Purge old comment revisions after",
+      "credentials-reset_token_lifetime" : "Invalidate code for resetting a password after",
+      "feed_width" : "Web UI: Feed width (in pixels)",
+      "instants_lifetime" : "Purge notifications after",
+      "instants_viewed_lifetime" : "Purge viewed notifications after",
+      "media_max-size" : "Maximal size of an uploaded media",
+      "media_preview-gain" : "Media preview gain factor",
+      "media_verification_max-size" : "Maximal size of a media downloaded for verification",
+      "naming_location" : "Naming server location",
+      "naming_unavailable_max-retries" : "Naming server connection retries",
+      "news_lifetime" : "Purge news after",
+      "news_purge-pinned" : "Purge pinned news",
+      "posting_deleted_lifetime" : "Purge deleted post after",
+      "posting_draft_lifetime" : "Purge post drafts after",
+      "posting_image_recommended-pixels" : "Maximal resolution of a compressed image in a post (in pixels)",
+      "posting_image_recommended-size" : "Maximal size of a compressed image in a post",
+      "posting_max-size" : "Maximal size of posts",
+      "posting_media_max-size" : "Maximal size of a media attachment in a post",
+      "posting_non-admin_allowed" : "Allow any user to add posts (experimental)",
+      "posting_picked_hide-on-delete" : "Do not delete Newsfeed posts when original is deleted",
+      "posting_picked_revision_lifetime" : "Purge old picked post revisions after",
+      "posting_revealed_notification_age" : "Notify subscribers about opening a closed post, if it is newer than",
+      "posting_revision_lifetime" : "Purge old post revisions after",
+      "posting_subject_present" : "Posts have titles",
+      "posting_time_relative" : "Web UI: Show relative time in posts",
+      "profile_signing-key_valid-from_layover" : "Signing key activation layover",
+      "push_client_lifetime" : "Stop sending push notifications to inactive clients after",
+      "push_client_max-number" : "Maximal number of clients receiving push notifications",
+      "push_notification_lifetime" : "Delete not received push notifications after",
+      "reaction_deleted_lifetime" : "Purge deleted reactions after",
+      "remote-comment-verification_lifetime" : "Comment verification information lifetime",
+      "remote-posting-verification_lifetime" : "Post verification information lifetime",
+      "remote-reaction-verification_lifetime" : "Reaction verification information lifetime",
+      "subscribers_view" : "List of subscribers visible to",
+      "subscribers_view-total" : "Number of subscribers visible to",
+      "subscriptions_view" : "List of subscriptions visible to",
+      "subscriptions_view-total" : "Number of subscriptions visible to",
+      "token_lifetime" : "Authentication token lifetime",
+      "webmaster_email" : "Webmaster e-mail",
+      "webmaster_name" : "Webmaster name",
+      "webui_allow-indexing" : "Allow search engines to index the blog",
+      "webui_enabled" : "Enable Web UI",
+      "webui_head_top_html" : "Web UI: HTML to insert at the beginning of <HEAD>",
+      "webui_redirect-to-client" : "Web UI: Open in web client"
+    },
     "sheet" : {
       "addons" : "Add-ons",
       "appearance" : "Appearance",
