--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -45,6 +45,11 @@
     "wow" : "Ого"
   },
   "setting" : {
+    "client" : {
+      "mercy" : {
+        "language" : "Язык"
+      }
+    },
     "sheet" : {
       "posting" : "Пост"
     }
